<resources>
    <string name="app_name">ProjectManagerUI</string>
    <string name="hi_text">Hi, Quoc!</string>
    <string name="good_morning_text">Good Morning</string>
    <string name="search_text">Search</string>
    <string name="welcome">Welcome</string>
    <string name="introduce_text">Let\'s schedule your\nprojects</string>
    <string name="ongoing_projects">Ongoing Projects</string>
    <string name="view_all">View all</string>
    <string name="home">Home</string>
    <string name="profile_name">Quoc Nguyen</string>
    <string name="profile_title">Android Developer</string>
</resources>